K8S/apigateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-depl
spec:
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
      - name: apigateway
        image: k3d-ruby:5000/apigateway:v0.36
        resources:
          limits:
            cpu: "500m"
          requests:
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: apigateway
  ports:
    - name: apigateway
      protocol: TCP
      port: 80
      targetPort: 8080
