K8S/mongo-plat-depl.yaml
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: mongo-statefulset
#   labels:
#     app: mongo
# spec:
#   replicas: 1
#   serviceName: mongo
#   selector:
#     matchLabels:
#       app: mongo
#   template:
#     metadata:
#       labels:
#         app: mongo
#     spec:
#       containers:
#       - name: mongodb
#         image: mongo:7.0
#         ports:
#         - containerPort: 27017
#         env:
#         - name: MONGO_INITDB_ROOT_USERNAME
#           valueFrom:
#             secretKeyRef:
#               name: mongo-secret
#               key: mongo-user
#         - name: MONGO_INITDB_ROOT_PASSWORD
#           valueFrom:
#             secretKeyRef:
#               name: mongo-secret
#               key: mongo-password
#         volumeMounts:
#           - mountPath: "/data/db"
#             name: "mongo-pv-storage"
#   volumeClaimTemplates:
#     - metadata:
#         name: mongo-pv-storage
#       spec:
#         accessModes: [ "ReadWriteOnce" ]
#         resources:
#           requests:
#             storage: 500Mi
#         storageClassName: "local-path"
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mongo-service
# spec:
#   type: LoadBalancer
#   selector:
#     app: mongo
#   ports:
#     - protocol: TCP
#       port: 27017
#       targetPort: 27017
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mongo-clusterip-srv
# spec:
#   type: ClusterIP
#   selector:
#     app: mongo
#   ports:
#     - protocol: TCP
#       port: 27017
#       targetPort: 27017

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
  labels:
    app: mongo
spec:
  replicas: 1
  serviceName: mongo
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongodb
        image: mongo:7.0
        ports:
        - containerPort: 27017
        volumeMounts:
          - mountPath: "/data/db"
            name: "mongo-pv-storage"
  volumeClaimTemplates:
    - metadata:
        name: mongo-pv-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  type: LoadBalancer
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
