K8S/postgres-userservice.yaml
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: postgres-userservice
# spec:
#   serviceName: postgres-userservice
#   replicas: 1
#   selector:
#     matchLabels:
#       app: postgres-userservice
#   template:
#     metadata:
#       labels:
#         app: postgres-userservice
#     spec:
#       automountServiceAccountToken: false
#       containers:
#         - name: postgres
#           image: postgres:16
#           ports:
#             - containerPort: 5432
#           env:
#             - name: POSTGRES_DB
#               value: userdb
#             - name: POSTGRES_USER
#               value: user
#             - name: POSTGRES_PASSWORD
#               value: password
#           volumeMounts:
#             - mountPath: "/var/lib/postgresql/data"
#               name: "postgres-pv-storage"
#               subPath: data
#           resources:
#             limits:
#               cpu: "1"
#               memory: "1Gi"
#               storage: "1Gi"
#               ephemeral-storage: "1Gi"
#             requests:
#               cpu: "0.5"
#               memory: "512Mi"
#               storage: "500Mi"
#               ephemeral-storage: "1Gi"

#   volumeClaimTemplates:
#     - metadata:
#         name: postgres-pv-storage
#       spec:
#         accessModes: [ "ReadWriteOnce" ]
#         resources:
#           requests:
#             storage: 500Mi
#         storageClassName: "local-path"
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: postgres-userservice-clusterip-srv
# spec:
#   type: ClusterIP
#   selector:
#     app: postgres-userservice
#   ports:
#     - name: postgres
#       protocol: TCP
#       port: 5432
#       targetPort: 5432

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-userservice
spec:
  serviceName: postgres-userservice
  replicas: 1
  selector:
    matchLabels:
      app: postgres-userservice
  template:
    metadata:
      labels:
        app: postgres-userservice
    spec:
      automountServiceAccountToken: false
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: "postgres-pv-user-storage"
              subPath: data
  volumeClaimTemplates:
    - metadata:
        name: postgres-pv-user-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-userservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: postgres-userservice
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
