K8S/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  selector:
    matchLabels:
      app: postservice
  template:
    metadata:
      labels:
        app: postservice
    spec:
      containers:
      - name: postservice
        image: k3d-ruby:5000/postservice:v0.29
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
          requests:
            cpu: "100m"
            memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
  labels:
    job: postservice
    app: postservice
spec:
  type: ClusterIP
  selector:
    app: postservice
  ports:
    - name: postservice
      protocol: TCP
      port: 80
      targetPort: 8080

# ---
# apiVersion: monitoring.coreos.com/v1
# kind: ServiceMonitor
# metadata:
#   name: posts-monitor
#   labels:
#     release: prometheus
#     app: prometheus
# spec:
#   jobLabel: job
#   endpoints:
#   - interval: 30s
#     port: postservice
#     path: /metrics
#   selector:
#     matchLabels:
#       app: postservice
