K8S/posts-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postservice-np-srv
spec:
  type: NodePort
  selector:
    app: postservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
