K8S/users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
spec:
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
      - name: userservice
        image: k3d-ruby:5000/userservice:v0.5
        resources:
          limits:
            cpu: "1000m"
          requests:
            cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
  name: users-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
    - name: userservice
      protocol: TCP
      port: 80
      targetPort: 8082
