K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: ingress-nginx  # Specify the namespace of the Ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: acme.com
      http: 
        paths:
          - path: /api/posts
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 80

          - path: /api/l/likes
            pathType: Prefix
            backend:
              service:
                name: likes-clusterip-srv
                port:
                  number: 80
